syntax = "proto3";

package ai.metathings.service.identityd2;
option go_package = "github.com/nayotta/metathings/proto/identityd2";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

import "model.proto";

message IssueTokenByCredentialRequest {
	OpCredential credential = 1;
	google.protobuf.Timestamp timestamp = 2;
	google.protobuf.Int64Value nonce = 3;
	google.protobuf.StringValue hmac = 4;
}

message IssueTokenByCredentialResponse {
	Token token = 1;
}
